src/index.scss
/* ... */
.printer-status-display i.material-icons {
	font-size: 6rem;
	display: inline-block;
}
.printer-status-display i.material-icons:first-of-type {
	position: relative;
	z-index: 6;
	width: 3rem;
	overflow: hidden;
	color: #F44336;
}
.printer-status-display i.material-icons:last-of-type {
	position: relative;
	z-index: 5;
	margin-left: -3rem;
	overflow: hidden;
	color: #4D983E;
}

.printer-status {
	text-align: center;
	display: flex;
	margin-bottom: 0.8rem;
}
.printer-status a {
	flex: 1;
	text-align: center;
	text-decoration: none;
	color: #555;
}
.printer-status a i.material-icons {
	font-size: 1.2rem;
	vertical-align: top;
	margin-top: 1px;
}
.printer-status a i.material-icons.up {
	color: #4D983E;
}
.printer-status a i.material-icons.down {
	color: #F44336;
}

div.dash-printer h2 {
	text-align: center;
	margin: 0 0 0.6rem 0;
	color: #444;
	font-weight: 600;
}

table.dash-printer-queue {
	width: 100.1%;
	table-layout: fixed;
	border-collapse: collapse;
}

table.dash-printer-queue thead {
	background-color: #F5F5F5;
	border-top: 1px solid #EBEBEB;
	border-bottom: 1px solid #EBEBEB;
}

table.dash-printer-queue thead th {
	padding: 0.35rem 0.6rem;
	box-sizing: border-box;
	font-size: 0.75rem;
	color: #777;
	text-transform: uppercase;
	text-align: left;
	font-weight: 600;

	&:first-child {
		padding-left: 1rem;
	}
	&:last-child {
		padding-right: 1rem;
	}
}

table.dash-printer-queue tbody tr {
	border-top: 1px solid #F3F3F3;
}
table.dash-printer-queue tbody tr:nth-child(2n) {
	background-color: #FAFAFA;
}

table.dash-printer-queue tbody tr.failed {
	background-color: #FFF0F0;
	border-top: 1px solid #EDD;
	td {
		color: #6d4849;
	}

	& + tr {
		border-top: 1px solid #EDD;
	}
}

table.dash-printer-queue tbody td {
	padding: 0.45rem 0.6rem;
	box-sizing: border-box;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
	font-size: 0.82rem;
	color: #5A5A5A;

	&:first-child {
		padding-left: 1rem;
	}
	&:last-child {
		padding-right: 1rem;
	}
}

table.dash-printer-queue tbody td i.material-icons {
	position: relative;
	top: 0.2rem;
	font-size: 1.1rem;
	color: #AAA;
}


table.job-list {
	width: 100.1%;
	table-layout: fixed;
	border-collapse: collapse;
}

table.job-list thead {
	background-color: #F5F5F5;
	border-top: 1px solid #EBEBEB;
	border-bottom: 1px solid #EBEBEB;
}

table.job-list thead th {
	padding: 0.35rem 0.6rem;
	box-sizing: border-box;

	font-size: 0.75rem;
	color: #777;
	text-transform: uppercase;
	text-align: left;
	font-weight: 600;

	&:first-child {
		padding-left: 1rem;
	}
	&:last-child {
		padding-right: 1rem;
	}
}

table.job-list tbody tr {
	border-top: 1px solid #F3F3F3;
}
table.job-list tbody tr:nth-child(2n) {
	background-color: #FAFAFA;
}
table.job-list tbody tr:first-child {
	border-top: none;
}

table.job-list tbody tr.failed {
	background-color: #FFF0F0;
	border-top: 1px solid #EDD;
	td {
		color: #6d4849;
	}

	& + tr {
		border-top: 1px solid #EDD;
	}
}

table.job-list tbody td {
	padding: 0.45rem 0.6rem;
	overflow: hidden;

	white-space: nowrap;
	text-overflow: ellipsis;
	font-size: 0.82rem;
	color: #5A5A5A;

	&:first-child {
		padding-left: 1rem;
	}
	&:last-child {
		padding-right: 1rem;
	}
}

table.job-list tbody td i.material-icons {
	position: relative;
	top: 0.2rem;
	font-size: 1.1rem;
	color: #AAA;
}


.text-center {
	text-align: center;
}
.no-padding {
	padding: 0 !important;
}
.no-side-padding {
	padding-left: 0 !important;
	padding-right: 0 !important;
}
.no-bottom-padding {
	padding-bottom: 0 !important;
}


.user-profile > div.row:first-child {
	border-bottom: 1px solid rgba(0, 0, 0, 0.08);
}

.user-profile div.fac-dept {
	margin-top: 1.35rem;
	margin-right: 1.8rem;
	text-align: right;
	color: #AAA;
	font-size: 1.2rem;
	font-style: italic;
}

.user-profile h2 {
	margin-top: 0;
	color: #444;
	font-size: 1.5rem;
	font-weight: 600;
	padding: 1.2rem 1.8rem;
	margin-bottom: 0;
}

.user-profile hr {
	border: none;
	margin: 0;
	border-bottom: 1px solid rgba(0, 0, 0, 0.08);
}

.user-profile h2 .badge {
	display: inline-block;
	padding: 0.3rem 0.6rem;
	border-radius: 1rem;
	margin-left: 0.6em;
	margin-top: 0.2rem;
	font-size: 0.9rem;
	vertical-align: top;
	background-color: $accent-color;
	color: rgba(255, 255, 255, 0.9);
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
}

.user-profile h3 {
	margin: 0;
	padding: 1.2rem 1.8rem;
}

.user-profile .flex-row-container {
	padding: 1.4rem 1.8rem;
}
.user-profile .user-profile-details {
	line-height: 1.4rem;
	font-size: 0.9rem;
}

.user-profile .quota-label {
	margin-right: 1.4rem;
	padding-top: 0.2rem;
	color: #555;
	font-weight: 600;
}
.user-profile .quota-bar {
	flex: 1;
	position: relative;
	background-color: #EEE;
	border-radius: 1rem;
	height: 2rem;
	box-shadow: inset 0 1px 5px rgba(0, 0, 0, 0.1);
	overflow: hidden;
}
.user-profile .quota-bar.loading:before {
	position: absolute;
	left: 0; right: 0; top: 0; bottom: 0;
	display: block;
	text-align: center;
	line-height: 2rem;
	font-size: 0.8rem;
	color: rgba(0, 0, 0, 0.4);
	content: "Loading...";
}
.user-profile .quota-bar .quota-inner-bar {
	box-sizing: border-box;
	margin: 0.3rem 0.35rem;
	padding-right: 0.6rem;
	height: 1.4rem;
	min-width: 1.4rem;
	background-color: $accent-color;
	border-radius: 0.7rem;
	text-align: right;
	overflow: hidden;
	font-size: 0.7rem;
	line-height: 1.4rem;
	color: rgba(255, 255, 255, 0.7);
	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.16);
	opacity: 1;
	transition: opacity 0.1s ease-in-out, width 0.3s ease-in-out;

	strong {
		font-weight: 600;
	}
}
.user-profile .quota-bar.loading .quota-inner-bar {
	opacity: 0;
	width: 10rem !important;
}


div.text-log {
	padding: 1.4rem 1.8rem;
	background-color: #073642;
	color: #93a1a1;
	font-family: monospace;
	overflow-x: auto;
	white-space: nowrap;
}
/* ... */

