Make quota bar start at a smaller width when animating and fix quota label vertical alignment.

--- a/src/index.scss
+++ b/src/index.scss
@@ -635,7 +635,7 @@ table.job-list tbody td i.material-icons {
 
 .user-profile .quota-label {
 	margin-right: 1.4rem;
-	padding-top: 0.2rem;
+	padding-top: 0.25rem;
 	color: #555;
 	font-weight: 600;
 }
@@ -681,7 +681,7 @@ table.job-list tbody td i.material-icons {
 }
 .user-profile .quota-bar.loading .quota-inner-bar {
 	opacity: 0;
-	width: 10rem !important;
+	width: 8rem !important;
 }
 
 
